--- a/index.html
+++ b/index.html
@@ -4,19 +4,83 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Zwembad</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Optioneel: voor je CSS -->
-    <script defer src="script.js"></script> <!-- Optioneel: voor je JavaScript -->
+    <title>Zwembadwaarden Invoer</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body>
-    <header>
-        <h1>Welcome to My Page</h1>
+<body class="bg-light d-flex flex-column min-vh-100">
+
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">MyApp</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">logs</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Settings</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <!-- Header -->
+    <header class="bg-primary text-white py-3 shadow-sm">
+        <div class="container">
+            <h1 class="h3 text-center">Zwembadbeheer</h1>
+            <p class="text-center mb-0">Invoer van chemische waarden voor optimale waterkwaliteit</p>
+        </div>
     </header>
-    <main>
-        <p>This is a basic HTML template to get started.</p>
+
+    <!-- Main Content -->
+    <main class="container my-5 flex-grow-1">
+        <div class="row justify-content-center">
+            <div class="col-lg-6 col-md-8 col-sm-10">
+                <div class="card shadow-sm">
+                    <div class="card-header bg-primary text-white">
+                        <h2 class="h5 text-center">Zwembadwaarden Invoeren</h2>
+                    </div>
+                    <div class="card-body">
+                        <form id="pool-form">
+                            <!-- pH Waarde Invoer -->
+                            <div class="mb-3">
+                                <label for="ph" class="form-label">pH-waarde</label>
+                                <input type="number" step="0.01" id="ph" name="ph" class="form-control" placeholder="Bijvoorbeeld: 7.4" required>
+                            </div>
+                            <!-- Chloor Waarde Invoer -->
+                            <div class="mb-3">
+                                <label for="chlorine" class="form-label">Chloor (mg/L)</label>
+                                <input type="number" step="0.01" id="chlorine" name="chlorine" class="form-control" placeholder="Bijvoorbeeld: 1.5" required>
+                            </div>
+                            <!-- Verzendknop -->
+                            <div class="d-grid">
+                                <button type="submit" class="btn btn-primary">Verstuur Waarden</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
-    <footer>
-        <p>&copy; 2025 Your Name</p>
+
+    <!-- Footer -->
+    <footer class="bg-dark text-white py-3">
+        <div class="container text-center">
+            <p class="mb-1">&copy; 2025 Zwembadbeheer. Alle rechten voorbehouden.</p>
+            <p class="small mb-0">Ontworpen voor laptop en mobiel gebruik.</p>
+        </div>
     </footer>
+
+    <!-- Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
