--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="history.html">history</a>
+                        <a class="nav-link" href="history.html">History</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Logs</a>
