--- a/history.html
+++ b/history.html
@@ -55,7 +55,7 @@
                         <a class="nav-link active" aria-current="page" href="history.html">History</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Logs</a>
+                        <a class="nav-link" href="Logs.html">Logs</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Settings</a>
