--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         <a class="nav-link" href="history.html">History</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./logs.html">logs</a>
+                        <a class="nav-link" href="./logs.html">Logs</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Settings</a>
