--- a/history.html
+++ b/history.html
@@ -55,7 +55,7 @@
                         <a class="nav-link active" aria-current="page" href="history.html">History</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Logs</a>
+                        <a class="nav-link" href="./logs.html">Logs</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Settings</a>
@@ -79,7 +79,7 @@
             <div class="col-lg-8 col-md-10 col-sm-12">
                 <div class="card shadow-sm">
                     <div class="card-header bg-primary text-white">
-                        <h2 class="h5 text-center">Logboek</h2>
+                        <h2 class="h5 text-center">History</h2>
                     </div>
                     <div class="card-body">
                         <div class="table-responsive">
