--- a/logs.html
+++ b/logs.html
@@ -7,9 +7,21 @@
     <title>Zwembadwaarden Invoer</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script>
+        async function fetchLog() {
+            try {
+                const response = await fetch('/');
+                const data = await response.json();
+                const logViewer = document.getElementById('logviewer');
+                logViewer.textContent = data.log.join('\n');
+            } catch (error) {
+                console.error('Error fetching log:', error);
+            }
+        }
+    </script>
 </head>
-<body class="bg-light d-flex flex-column min-vh-100">
 
+<body class="bg-light d-flex flex-column min-vh-100">
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
@@ -23,7 +35,10 @@
                         <a class="nav-link" href="./index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">logs</a>
+                        <a class="nav-link" href="./history.html">History</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">Logs</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Settings</a>
@@ -50,11 +65,7 @@
                         <h2 class="h5 text-center">Logs</h2>
                     </div>
                     <div class="card-body">
-                        <pre class="text-monospace">
-                            {% for line in log_content %}
-                            {{ line }}
-                            {% endfor %}
-                        </pre>
+                        <pre id="logviewer" class="text-monospace">Loading logs...</pre>
                     </div>
                 </div>
             </div>
