--- a/settings.html
+++ b/settings.html
@@ -4,45 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Zwembadwaarden Invoer</title>
-    <!-- Bootstrap CSS -->
+    <title>Settings - Zwembadbeheer</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        /* Navbar Styling */
-        .navbar {
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-        }
-        .navbar-brand {
-            font-weight: bold;
-            font-size: 1.25rem;
-        }
-        .nav-link {
-            font-size: 1rem;
-            transition: color 0.3s ease;
-        }
-        .nav-link:hover {
-            color: #0d6efd;
-        }
-
-        /* Header Styling */
-        header {
-            background-color: #0056b3 !important;
-        }
-
-        /* Card Styling */
-        .card {
-            border-radius: 10px;
-        }
-        .card-header {
-            border-top-left-radius: 10px;
-            border-top-right-radius: 10px;
-        }
-
-        /* Footer Styling */
-        footer {
-            font-size: 0.9rem;
-        }
-    </style>
 </head>
 <body class="bg-light d-flex flex-column min-vh-100">
 
@@ -56,16 +19,16 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="./index.html">Home</a>
+                        <a class="nav-link" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link " aria-current="page" href="history.html">History</a>
+                        <a class="nav-link" href="history.html">History</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="logs.html">Logs</a>
+                        <a class="nav-link" href="Logs.html">Logs</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="settings.html">Settings</a>
+                        <a class="nav-link active" aria-current="page" href="settings.html">Settings</a>
                     </li>
                 </ul>
             </div>
@@ -73,27 +36,29 @@
     </nav>
 
     <!-- Header -->
-    <header class="bg-primary text-white py-3 shadow-sm">
+    <header class="bg-primary text-white py-4 shadow-sm">
         <div class="container">
-            <h1 class="h3 text-center">Log File Viewer</h1>
-            <p class="text-center mb-0">verzameling van alle Pool Monitoring App meldingen.</p>
+            <h1 class="h3 text-center">Instellingen</h1>
+            <p class="text-center mb-0">Stel de grootte van je zwembad in</p>
         </div>
     </header>
 
     <!-- Main Content -->
     <main class="container my-5 flex-grow-1">
         <div class="row justify-content-center">
-            <div class="col-lg-6 col-md-8 col-sm-10">
+            <div class="col-lg-6 col-md-8 col-sm-12">
                 <div class="card shadow-sm">
                     <div class="card-header bg-primary text-white">
-                        <h2 class="h5 text-center">Logs</h2>
+                        <h2 class="h5 text-center">Zwembadinstellingen</h2>
                     </div>
                     <div class="card-body">
-                        <pre class="text-monospace">
-                            {% for line in log_content %}
-                            {{ line }}
-                            {% endfor %}
-                        </pre>
+                        <form id="settings-form">
+                            <div class="mb-3">
+                                <label for="pool-volume" class="form-label">Zwembad Volume (in m³)</label>
+                                <input type="number" class="form-control" id="pool-volume" min="1" required>
+                            </div>
+                            <button type="submit" class="btn btn-primary w-100">Instellen</button>
+                        </form>
                     </div>
                 </div>
             </div>
@@ -109,5 +74,23 @@
 
     <!-- Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+    
+
+        // Sla het zwembadvolume op in localStorage
+        document.getElementById("settings-form").addEventListener("submit", function(e) {
+            e.preventDefault();
+
+            const newVolume = document.getElementById("pool-volume").value;
+
+            // Sla de nieuwe zwembadgrootte op in localStorage
+            localStorage.setItem("poolVolume", newVolume);
+
+            alert("Zwembadgrootte succesvol opgeslagen!");
+
+            // Optioneel: Redirect naar de homepagina of andere pagina
+            window.location.href = "index.html";
+        });
+    </script>
 </body>
 </html>
