--- a/history.html
+++ b/history.html
@@ -139,16 +139,16 @@ history.forEach((item, index) => {
     let phPlus = 0;
     let phMinus = 0;
     
-    const mlPer0_1phPlus = localStorage.getItem("mlPer0_1phPlus") || 20 ; // Aangepaste dosering voor 0,1 pH stijging
-    const mlPer0_1phMin = localStorage.getItem("mlPer0_1phMin") || 20 ; // Aangepaste dosering voor 0,1 pH stijging
+    const mlPer0_1phPlus = localStorage.getItem("mlPer0_1phPlus") || 20/3 ; // Aangepaste dosering voor 0,1 pH stijging
+    const mlPer0_1phMin = localStorage.getItem("mlPer0_1phMin") || 20/3 ; // Aangepaste dosering voor 0,1 pH stijging
     
-    if (item.ph < 7.0) {
+    if (item.ph < 7.2) {
         // pH-waarde is te laag, dus we moeten pH+ toevoegen
-        const requiredPhPlus = ((7.0 - item.ph) * mlPer0_1phPlus);
+        const requiredPhPlus = (7.2 - item.ph) * (poolVolume * mlPer0_1phPlus);
         phPlus = requiredPhPlus.toFixed(2); // Hoeveelheid pH+ in ml
     } else if (item.ph > 7.6) {
         // pH-waarde is te hoog, dus we moeten pH- toevoegen
-        const requiredPhMinus = ((item.ph - 7.6) * mlPer0_1phMin);
+        const requiredPhMinus = (item.ph - 7.6) * (poolVolume * mlPer0_1phPlus);
         phMinus = requiredPhMinus.toFixed(2); // Hoeveelheid pH- in ml
     }
 
