settings veranderd in dosering

--- a/settings.html
+++ b/settings.html
@@ -71,26 +71,28 @@
 
                             <!-- Concentraties -->
                             <div class="mb-3">
-                                <label for="ph-plus" class="form-label">Concentratie pH+ (g/L)</label>
+                                <label for="ph-plus" class="form-label">dosering pH+ (per 0.1 ml/m3)</label>
                                 <input type="number" class="form-control" id="ph-plus" step="0.1" min="0" required>
                             </div>
                             <div class="mb-3">
-                                <label for="ph-minus" class="form-label">Concentratie pH- (g/L)</label>
+                                <label for="ph-minus" class="form-label">dosering pH- (per 0.1 ml/m3)</label>
                                 <input type="number" class="form-control" id="ph-minus" step="0.1" min="0" required>
                             </div>
                             <div class="mb-3">
-                                <label for="chlorine" class="form-label">Concentratie chloor (mg/L)</label>
+                                <label for="chlorine" class="form-label">dosering chloor (per 1 ppm ml/m3)</label>
                                 <input type="number" class="form-control" id="chlorine" step="0.1" min="0" required>
                             </div>
 
                             <!-- Meldingsfrequentie -->
                             <div class="mb-3">
-                                <label for="notification-frequency" class="form-label">Meldingsfrequentie</label>
+                                <label for="notification-frequency" class="form-label">meet herinnering</label>
                                 <select class="form-select" id="notification-frequency" required>
                                     <option value="1">Dagelijks</option>
                                     <option value="2">Om de dag</option>
                                     <option value="3">Om de 2 dagen</option>
                                     <option value="4">Om de 3 dagen</option>
+                                    <option value="4">weekelijks</option>
+                                    <option value="4">maandelijks</option>
                                 </select>
                             </div>
 
