--- a/history.html
+++ b/history.html
@@ -8,6 +8,13 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
+         body {
+            background-image: url('sea.jpg');  /* Vervang dit pad door het pad naar jouw afbeelding */
+            background-size: cover;  /* Zorgt ervoor dat de afbeelding de hele achtergrond bedekt */
+            background-repeat: no-repeat;  /* Voorkomt dat de afbeelding zich herhaalt */
+            height: 100vh;  /* Zorgt ervoor dat de achtergrond minimaal de volledige hoogte van het scherm bedekt */
+            margin: 0;  /* Verwijdert de standaard marge van de body */
+        }
         /* Navbar Styling */
         .navbar {
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -42,7 +49,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">PM</a>
+            <a class="navbar-brand" href="index.html">PM</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
