--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
+
+    body {
+            background-image: url('sea.jpg');  /* Vervang dit pad door het pad naar jouw afbeelding */
+            background-size: cover;  /* Zorgt ervoor dat de afbeelding de hele achtergrond bedekt */
+            background-position: center center;  /* Zorgt ervoor dat de afbeelding in het midden van het scherm wordt uitgelijnd */
+            background-repeat: no-repeat;  /* Voorkomt dat de afbeelding zich herhaalt */
+            height: 100vh;  /* Zorgt ervoor dat de achtergrond minimaal de volledige hoogte van het scherm bedekt */
+            margin: 0;  /* Verwijdert de standaard marge van de body */
+        }
         /* Navbar Styling */
         .navbar {
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -158,11 +167,9 @@
             let chlorineRequiredMl = 0;
             if (chlorine < chlorineDesired) {
                 chlorineRequiredMl = (poolVolume * chlorineConcentration) * (chlorineDesired - chlorine); // Benodigde chloor in ml           
-                chlorineRequiredMl = chlorineRequiredMl.toFixed(2);
-
+                chlorineRequiredMl = chlorineRequiredMl.toFixed(2);            // Afronden van de chloorwaarde op 2 decimalen
             } 
     
-            // Afronden van de chloorwaarde op 2 decimalen
     
             // Toon de berekende waarde in een pop-up
             alert(`pH+: ${phPlus} ml, pH-: ${phMinus} ml, Chloor: ${chlorineRequiredMl} ml`);
