--- a/settings.html
+++ b/settings.html
@@ -6,13 +6,49 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Settings - Zwembadbeheer</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        body {
+           background-image: url('sea.jpg');  /* Vervang dit pad door het pad naar jouw afbeelding */
+           background-size: cover;  /* Zorgt ervoor dat de afbeelding de hele achtergrond bedekt */
+           background-repeat: no-repeat;  /* Voorkomt dat de afbeelding zich herhaalt */
+           height: 100vh;  /* Zorgt ervoor dat de achtergrond minimaal de volledige hoogte van het scherm bedekt */
+           margin: 0;  /* Verwijdert de standaard marge van de body */
+       }
+       /* Navbar Styling */
+       .navbar {
+           box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+       }
+       .navbar-brand {
+           font-weight: bold;
+           font-size: 1.25rem;
+       }
+
+       /* Header Styling */
+       header {
+           background-color: #0056b3 !important;
+       }
+
+       /* Table Styling */
+       table {
+           border-collapse: collapse;
+       }
+       th {
+           background-color: #0056b3;
+           color: white;
+       }
+
+       /* Footer Styling */
+       footer {
+           font-size: 0.9rem;
+       }
+   </style>
 </head>
 <body class="bg-light d-flex flex-column min-vh-100">
 
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">PM</a>
+            <a class="navbar-brand" href="index.html">PM</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
