--- a/history.html
+++ b/history.html
@@ -62,7 +62,7 @@
                         <a class="nav-link active" aria-current="page" href="history.html">History</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="Logs.html">Logs</a>
+                        <a class="nav-link" href="logs.html">Logs</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="settings.html">Settings</a>
