--- a/html/index.html
+++ b/html/index.html
@@ -71,7 +71,7 @@
                         <a class="nav-link" href="history.html">History</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./logs.html">Logs</a>
+                        <a class="nav-link" href="logs.html">Logs</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="settings.html">Settings</a>
