verander input type naar email om user error te voorkomen

--- a/html/settings.html
+++ b/html/settings.html
@@ -133,7 +133,7 @@
                             </div>
                             <div class="mb-3">
                                 <label for="notificationEmail" class="form-label">Email voor herinneringen</label>
-                                <input type="text" class="form-control" id="notificationEmail" required>
+                                <input type="email" class="form-control" id="notificationEmail" required>
                             </div>
 
                             <button type="submit" class="btn btn-primary w-100">Instellingen Opslaan</button>
