format html pages

--- a/html/logs.html
+++ b/html/logs.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -21,40 +22,48 @@
     </script>
     <style>
         body {
-           background-image: url('sea.jpg');  /* Vervang dit pad door het pad naar jouw afbeelding */
-           background-size: cover;  /* Zorgt ervoor dat de afbeelding de hele achtergrond bedekt */
-           background-repeat: no-repeat;  /* Voorkomt dat de afbeelding zich herhaalt */
-           height: 100vh;  /* Zorgt ervoor dat de achtergrond minimaal de volledige hoogte van het scherm bedekt */
-           margin: 0;  /* Verwijdert de standaard marge van de body */
-       }
-       /* Navbar Styling */
-       .navbar {
-           box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-       }
-       .navbar-brand {
-           font-weight: bold;
-           font-size: 1.25rem;
-       }
+            background-image: url('sea.jpg');
+            /* Vervang dit pad door het pad naar jouw afbeelding */
+            background-size: cover;
+            /* Zorgt ervoor dat de afbeelding de hele achtergrond bedekt */
+            background-repeat: no-repeat;
+            /* Voorkomt dat de afbeelding zich herhaalt */
+            height: 100vh;
+            /* Zorgt ervoor dat de achtergrond minimaal de volledige hoogte van het scherm bedekt */
+            margin: 0;
+            /* Verwijdert de standaard marge van de body */
+        }
 
-       /* Header Styling */
-       header {
-           background-color: #0056b3 !important;
-       }
+        /* Navbar Styling */
+        .navbar {
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        }
 
-       /* Table Styling */
-       table {
-           border-collapse: collapse;
-       }
-       th {
-           background-color: #0056b3;
-           color: white;
-       }
+        .navbar-brand {
+            font-weight: bold;
+            font-size: 1.25rem;
+        }
 
-       /* Footer Styling */
-       footer {
-           font-size: 0.9rem;
-       }
-   </style>
+        /* Header Styling */
+        header {
+            background-color: #0056b3 !important;
+        }
+
+        /* Table Styling */
+        table {
+            border-collapse: collapse;
+        }
+
+        th {
+            background-color: #0056b3;
+            color: white;
+        }
+
+        /* Footer Styling */
+        footer {
+            font-size: 0.9rem;
+        }
+    </style>
 </head>
 
 <body class="bg-light d-flex flex-column min-vh-100">
@@ -62,7 +71,8 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
             <a class="navbar-brand" href="index.html">PM</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
@@ -119,4 +129,5 @@
     <!-- Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
