--- a/html/history.html
+++ b/html/history.html
@@ -113,8 +113,10 @@
                                         <th>Chloor Benodigd (ml)</th>
                                     </tr>
                                 </thead>
-                                <tbody>
-                                    <!-- Dynamisch geladen data uit localStorage -->
+                                <tbody id="history-table-body">
+                                    <tr>
+                                        <td colspan="7" class="text-center">Laden...</td>
+                                    </tr>
                                 </tbody>
                             </table>
                         </div>
