--- a/html/logs.html
+++ b/html/logs.html
@@ -8,18 +8,6 @@
     <title>Zwembadwaarden Invoer</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script>
-        async function fetchLog() {
-            try {
-                const response = await fetch('/log');
-                const data = await response.json();
-                const logViewer = document.getElementById('logviewer');
-                logViewer.textContent = data.log.join('\n');
-            } catch (error) {
-                console.error('Error fetching log:', error);
-            }
-        }
-    </script>
     <style>
         body {
             background-image: url('sea.jpg');
@@ -128,6 +116,22 @@
 
     <!-- Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
+    <script>
+        async function fetchLog() {
+            try {
+                const response = await fetch('http://192.168.238.189:8000/get_log');
+                const data = await response.json();
+                const logViewer = document.getElementById('logviewer');
+                logViewer.textContent = data.log.join('\n');
+            } catch (error) {
+                console.error('Error fetching log:', error);
+            }
+        }
+        
+        fetchLog();
+    </script>
+
 </body>
 
 </html>
