box scrollbar in history box.

--- a/html/history.html
+++ b/html/history.html
@@ -49,6 +49,12 @@
         footer {
             font-size: 0.9rem;
         }
+
+        .card-body {
+            max-height: 50vh; /*Max hight for log viewer box */
+            overflow-y: auto;  /* Vertical scrollbar when content overflows */
+            
+        }
     </style>
 </head>
 
